# climush

./: .gitignore  README.md
bioinformatics-pipeline/: .bashrc  .gitignore  LICENSE.txt  README.md  climush_get-started.sh
bioinformatics-pipeline/climush_py-package/: README.md  pyproject.toml  setup.py
bioinformatics-pipeline/climush_py-package/climush/: __init__.py  binfo_old.py  bioinfo.py  config.py  constants.py  utilities.py  viz.py
bioinformatics-pipeline/climush_py-package/climush.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bioinformatics-pipeline/config/: climush-bioinfo_default-settings.toml  climush-bioinfo_pipeline-settings.toml  climush-bioinfo_user-settings.toml  illumina_mock-community.xlsx
bioinformatics-pipeline/config/barcode-mapping/: 240313_Run5_PacBioSporocarps_iNatIDS.xlsx  illumina_soil-litter_2022-05_barcode-mapping.xlsx  illumina_soil-litter_2022-10_barcode-mapping.xlsx  illumina_soil-litter_2023-05_barcode-mapping.xlsx  illumina_soil-litter_2023-10_barcode-mapping.xlsx  illumina_soil-litter_2023-10_barcode-mapping_full.xlsx  pacbio_2023a_pool1_mapping.csv  pacbio_2023a_pool2_mapping.csv  pacbio_soil-litter_2023-10_barcode-mapping.xlsx  pacbio_sporocarp-f_2023-03_barcode-mapping.xlsx  pacbio_sporocarp-f_2023-11_barcode-mapping.xlsx  pacbio_sporocarp-f_2023-12_barcode-mapping.xlsx  pacbio_sporocarp-f_2024-01_barcode-mapping.xlsx  pacbio_sporocarp-f_2024-03_barcode-mapping.xlsx  pacbio_sporocarp-f_2024-04_barcode-mapping.xlsx  pacbio_sporocarp-f_2024-06_barcode-mapping.xlsx
bioinformatics-pipeline/config/field-ids/: pacbio_sporocarp-f_2023-11_field-ids.xlsx  pacbio_sporocarp-f_2023-12_field-ids.xlsx  pacbio_sporocarp-f_2024-01_field-ids.xlsx  pacbio_sporocarp-f_2024-04_field-ids.xlsx  pacbio_sporocarp-f_2024-06_field-ids.xlsx
bioinformatics-pipeline/pipeline/: 00_sort-files.py  01_demultiplex.py  02_prefilter.py  03_remove-primers.py  04_quality-filtering.py  05_dereplicate-01.py  06_separate-subregions.py  07_chimera-check.py  07_denoise.py  08_chimera-check.py  08_dereplicate-02.py  09_dereplicate-02.py  09_otu-clustering.py  10_assign-taxonomy.py  10_otu-clustering.py  11_assign-taxonomy.py  11_create-otu-table.py  mapping.py  rename_sequence_files.py
bioinformatics-pipeline/sequences/: pacbio_sporocarp-f_2023-12_761.fasta
climush/src/climush/: collection.py  sequence.py  site-codes.py
data-analysis/its-variants/: its-variants_data-cleaning.py  its-variants_histogram.py
data-dissemination/climush-documentation/source/reference/python-modules/: utilities.rst
data-dissemination/climush-documentation/source/reference/python-modules/utilities/: add_prefix.rst
data-dissemination/genbank/: sra-upload-guide.md
docker-containers/bioinformatics/: .gitignore  compose.yaml
docker-containers/bioinformatics/app/: .bashrc  Dockerfile  mycoformatics.yml
docker-containers/bioinformatics/deploy/: compose.yaml
docker-containers/test-image/: compose.yaml
docker-containers/test-image/app/: Dockerfile  mycoformatics.yml
globus/: README.md
helper-scripts/: .gitignore
helper-scripts/biom-format/: biom-to-phyloseq.R
helper-scripts/config/: climush-bioinfo_file-rename.toml  climush-bioinfo_filename-components.toml  illumina_endos_2022-10_file-rename-config.toml  illumina_endos_2023-10_file-rename-config.toml  illumina_soil-litter_2023-10_file-rename-config.ini  illumina_soil-litter_2023-10_file-rename-config.toml
helper-scripts/config/reference-data/: macrofungi-defined_2024-10-25.csv
helper-scripts/config/renaming-mapping-files/from-climush-gdrive/: 7 CLIMUSH-Macrosystems-Endophyte-Sampling-Fall2023-Datasheet.xlsx  Copy of 7 CLIMUSH-Macrosystems-Endophyte-Sampling-Fall2022-Datasheet.xlsx
helper-scripts/config/renaming-mapping-files/from-neda-arnold-lab/: its1_endophyte-mapping_2023.csv
helper-scripts/file-finding/: create_sample_list.py  find_files.py
helper-scripts/file-naming/: compare_seqfiles_mapping.py  merge_2023_maps.py  rename_2022_endophytes.py  rename_2023_endophytes.py  rename_sequence_files.py  rename_spore_files.py  update_run-name_bioinfo-output.py
helper-scripts/file-naming/endophytes/: rename_2023_endophytes.py
helper-scripts/file-naming/spores/: fix_spore_updated_filenames.py
helper-scripts/file-sorting/: get_file_paths.py  pacbio_sort_files.py
helper-scripts/illumina-2505/scripts/troubleshooting/taxonomic-assignment/: show-seqfile-headers.py
helper-scripts/miscell-scripts/: assess-top-reads.py  check_job_progress.sh  compress-partly-compressed.py  update-otu-table-tax.py
helper-scripts/otu-sorting/: filter_fasta_file.py  filter_macrofungi.py  filter_macrofungi_original.py
helper-scripts/primer-detection/degeneracy-codes/: create_degencode_dict.py  idp_degeneracy-codes_2025-07-04.csv
helper-scripts/sequence-summary/: get-top-reads.py
