[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'climush'
version = '0.0.7'
authors = [
    { name='Carolyn Delevich', email='cdelevic@uoregon.edu' }]
description = 'Tools to run the CliMush bioinformatics pipeline.'
readme = 'README.md'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
#    'Operating System :: Unix',  # unsure whether I want to include; also not 100% there's a Unix-only restriction
    'Development Status :: 3 - Alpha',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]
requires-python = ">=3.10"
dependencies = [
    'pandas',
#    'scipy',  # included in optional dependencies for pandas (see project.optional-dependencies below)
#    'numpy',  # included in optional dependencies for pandas (see project.optional-dependencies below)
#    'matplotlib',  # included in optional dependencies for pandas (see project.optional-dependencies below)
    'seaborn',
    'Bio',
    'tomlkit',
]

[project.optional-dependencies]
pandas = [
    "pandas[excel]",  # includes openpyxl
    "pandas[computation]",  # includes numpy, scipy
    "pandas[visualization]",  # includes matplotlib
    "pandas[performance]",  # recommended out of optional dependencies
]

[project.urls]
Homepage = 'https://github.com/cdelevich/climush/tree/main/bioinformatics-pipeline'
Repository = 'https://github.com/cdelevich/climush/tree/main/bioinformatics-pipeline/climush_py-package'
Issues = 'https://github.com/cdelevich/climush/issues'