[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'climush'
version = '0.0.9'
authors = [
    { name='Carolyn Delevich', email='cdelevic@uoregon.edu' }]
description = 'Tools to run the CliMush bioinformatics pipeline.'
readme = 'README.md'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
#    'Operating System :: Unix',  # unsure whether I want to include; also not 100% there's a Unix-only restriction
    'Development Status :: 3 - Alpha',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]
requires-python = ">=3.12"
dependencies = [
    'pandas[excel]',         # interacting with and creating dataframes
    'pandas[performance]',  # recommended by pandas to improve performance
    'numpy',                # basic numerical operations; required dependency for pandas
    'scipy',                # advanced statistical functions
    'matplotlib',           # basic data visualization
    'seaborn',              # advanced data visualization
    'Bio',                  # handling of sequencing data and sequencing data files (.fastq, .fasta)
    'tomlkit',              # parsing bioinformatics configuration from the .toml configuration file
    'psutil',               # determine available system memory for use with bbduk to filter out PhiX reads
]

[project.urls]
Homepage = 'https://github.com/cdelevich/climush/tree/main'
Repository = 'https://github.com/cdelevich/climush/tree/main/bioinformatics-pipeline/climush_py-package'
Issues = 'https://github.com/cdelevich/climush/issues'